Switch to 32-bit; Split results handling; fix getting langs_s

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,6 +1,11 @@
+# src/meson.build
+#
+# Copyright 2020 Johnathan C. Maudlin
+
 loc_sources = files('''
   loc.h
   main.c
   langs.c
   parse.c
+  results.c
 '''.split())
