Resolve clang + musl build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,24 @@
 # .gitlab-ci.yml
 
 stages:
-  - glibc
-  - musl
+  - debug
 
 #
 # Templates
 #
 
-.cc_template:
+.build:
   script:
     - CC=$CC meson build --buildtype debug
     - ninja -C ./build
     - ./build/loc src/*
+
+.debug:
+  stage: debug
+
+.release:
+  stage: release
+
 
 #
 # Jobs
@@ -22,9 +28,10 @@ Test clang + glibc:
   before_script:
     - apt update && apt upgrade -y
     - apt install -y clang lld meson
-  extends: .cc_template
+  extends:
+    - .build
+    - .debug
   image: ubuntu:20.04
-  stage: glibc
   variables:
     CC: clang
 
@@ -32,26 +39,29 @@ Test gcc + glibc:
   before_script:
     - apt update && apt upgrade -y
     - apt install -y gcc meson
-  extends: .cc_template
+  extends:
+    - .build
+    - .debug
   image: ubuntu:20.04
-  stage: glibc
   variables:
     CC: gcc
 
 Test clang + musl:
   before_script:
-    - apk --no-cache add clang-dev meson lld-dev musl-dev
-  extends: .cc_template
+    - apk --no-cache add clang gcc meson musl-dev
+  extends:
+    - .build
+    - .debug
   image: alpine:edge
-  stage: musl
   variables:
     CC: clang
 
 Test gcc + musl:
   before_script:
     - apk --no-cache add gcc meson musl-dev
-  extends: .cc_template
+  extends:
+    - .build
+    - .debug
   image: alpine:edge
-  stage: musl
   variables:
     CC: gcc
