Refactor pretty much everything, but the parser needs to be rewritten

--- a/meson.build
+++ b/meson.build
@@ -3,50 +3,62 @@
 project(
   'loc',
   'c',
-  default_options: ['c_std=c18'],
+  default_options: [
+    'b_colorout=auto',
+    'b_lto=false',
+    'b_lto_threads=0',
+    'b_pie=false',
+    'b_sanitize=address,undefined',
+    'buildtype=debug',
+    'c_std=c17',
+    'debug=true',
+    'optimization=0',
+    'strip=false',
+    'warning_level=3',
+    'werror=true',
+  ],
   license: 'ISC',
   meson_version: '>=0.53.0',
   version: '0.1.0',
 )
 
-if get_option('buildtype').startswith('debug')
-  build_options = [
-    'optimization=g',
-    'strip=false',
-    'warning_level=3',
-    'werror=true',
-    'b_lto=false',
-    'b_pie=false',
-    'b_sanitize=undefined',
-  ]
+#
+# Compilation
+#
+
+cc = meson.get_compiler('c', native: true)
+
+if cc.has_argument('-fno-omit-frame-pointer')
+  add_project_arguments('-fno-omit-frame-pointer', language: 'c')
 endif
 
-if get_option('buildtype').startswith('release')
-  build_options = [
-    'optimization=3',
-    'strip=true',
-    'warning_level=0',
-    'werror=false',
-    'b_lto=true',
-    'b_pie=true',
-    'b_sanitize=none',
-  ]
+if host_machine.system().startswith('freebsd')
+  if cc.has_argument('-D_C11_SOURCE')
+    add_project_arguments('-D_C11_SOURCE', language: 'c')
+  endif
+elif host_machine.system().startswith('linux')
+  if cc.has_argument('-D_DEFAULT_SOURCE')
+    add_project_arguments('-D_DEFAULT_SOURCE', language: 'c')
+  else
+    add_project_arguments('-D_BSD_SOURCE', language: 'c')
+  endif
+elif host_machine.system().startswith('openbsd')
+  if cc.has_argument('')
+    add_project_arguments('', language: 'c')
+  endif
 endif
 
-cc = meson.get_compiler('c')
-add_project_arguments('-D_DEFAULT_SOURCE', language: 'c')
+#
+# Executables
+#
 
 loc_sources = [
+  'src/loc.c',
   'src/loc.h',
-  'src/main.c',
-  'src/langs.c',
-  'src/parse.c',
-  'src/results.c',
 ]
 
 executable(
   'loc',
   loc_sources,
   install: false,
-  override_options: build_options,
 )
